--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -20,6 +20,7 @@ services:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\TranslationManager
         arguments:
             - @translation.extractor
+            - @manuel_translation.translation_loader
             - @manuel_translation.translations_doctrine_loader
             - @manuel_translation.translations_doctrine_dumper
             - @manuel_translation.translations_repository
@@ -29,3 +30,8 @@ services:
         calls:
             - ['setBackupDumper', [@translation.dumper.php]]
             - ['setBackupDir', [%manuel_translation.translations_backup_dir%]]
+#
+#    manuel_translation.twig_text_extension:
+#        class: Twig_Extensions_Extension_Text
+#        tags:
+#            - { name: twig.extension }
