--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "manuelj555/manuel-translation-bundle",
-    "require": {
-        "symfony/framework-bundle": "~2.5"  
-    },
-    "require-dev": {
-        "guzzlehttp/guzzle": "~5.0"
-    }
+  "name": "manuelj555/manuel-translation-bundle",
+  "require": {
+    "php": ">=5.3.3",
+    "symfony/framework-bundle": "~2.5",
+    "guzzlehttp/guzzle": "~5.0",
+    "knplabs/knp-paginator-bundle": "~2.4"
+  }
 }
