--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "php": ">=5.3.3",
     "symfony/framework-bundle": "~2.5",
     "guzzlehttp/guzzle": "~5.0",
-    "knplabs/knp-paginator-bundle": "~2.4",
-    "stof/doctrine-extensions-bundle": "~1.1@dev"
+    "pagerfanta/pagerfanta": "~1.0"
   },
   "autoload": {
-    "psr-4": { "ManuelAguirre\\Bundle\\TranslationBundle\\": "" }
+    "psr-4": {"ManuelAguirre\\Bundle\\TranslationBundle\\": ""}
   }
 }
