--- a/Resources/config/services_dev.yml
+++ b/Resources/config/services_dev.yml
@@ -38,3 +38,35 @@ services:
         tags:
             - { name: doctrine.event_listener, event: preUpdate }
             - { name: doctrine.event_listener, event: postFlush }
+
+
+    manuel_translation.translation_manager:
+        class: ManuelAguirre\Bundle\TranslationBundle\Translation\TranslationManager
+        arguments:
+            - @translation.extractor
+            - @manuel_translation.translation_loader
+            - @manuel_translation.translations_doctrine_loader
+            - @manuel_translation.translations_doctrine_dumper
+            - @manuel_translation.translations_repository
+            - %manuel_translation.locales%
+            - %manuel_translation.extract_dirs%
+            - %manuel_translation.translations_files_dirs%
+        calls:
+            - ['setFilesPrefix', [%manuel_translation.files_prefix%]]
+
+    manuel_translation.backup_manager:
+        class: ManuelAguirre\Bundle\TranslationBundle\Translation\BackupManager
+        arguments:
+            - @manuel_translation.translations_doctrine_loader
+            - @manuel_translation.translations_doctrine_dumper
+            - %manuel_translation.locales%
+        calls:
+            - ['setBackupDumper', [@translation.dumper.php]]
+            - ['setBackupDir', [%manuel_translation.translations_backup_dir%]]
+
+
+    manuel_translation.translation_type:
+        class: ManuelAguirre\Bundle\TranslationBundle\Form\Type\TranslationType
+        arguments: [@manuel_translation.translations_repository]
+        tags:
+            - { name: form.type , alias: manuel_translation }
