--- a/Resources/config/sync_services.yml
+++ b/Resources/config/sync_services.yml
@@ -2,18 +2,8 @@ services:
     manuel_translation.synchronizator:
         class: ManuelAguirre\Bundle\TranslationBundle\Synchronization\Synchronizator
         arguments:
-            - @doctrine.orm.entity_manager
+            - @manuel_translation.translations_doctrine_loader
             - @manuel_translation.translations_repository
-            - @manuel_translation.server_sync
-
-    manuel_translation.server_sync:
-        class: ManuelAguirre\Bundle\TranslationBundle\Synchronization\ServerSync
-        arguments:
-            - @manuel_translation.guzzle_client
-            - %manuel_translation.client.api_key%
-
-    manuel_translation.guzzle_client:
-        class: GuzzleHttp\Client
-        arguments:
-            -
-                base_url: %manuel_translation.client.server_url%
+            - @filesystem
+            - %manuel_translation.locales%
+            - %manuel_translation.translations_backup_dir%
