Simplificando el funcionamiento del bundle
Ahora la sincronización se hace a traves de un archivo php que debe
actualizarse y leerse para pasar traducciones a otros repositorios del
proyecto.

--- a/Resources/config/sync_services.yml
+++ b/Resources/config/sync_services.yml
@@ -2,6 +2,7 @@ services:
     manuel_translation.synchronizator:
         class: ManuelAguirre\Bundle\TranslationBundle\Synchronization\Synchronizator
         arguments:
+            - @doctrine.orm.entity_manager
             - @manuel_translation.translations_doctrine_loader
             - @manuel_translation.translations_repository
             - @filesystem
