Creado hash para validar sincronizaciones
La idea es no permitir regenerar el archivo de traducciones hasta tanto
no se hayan sincronizado las mismas con la base de datos

--- a/Resources/config/sync_services.yml
+++ b/Resources/config/sync_services.yml
@@ -6,5 +6,6 @@ services:
             - @manuel_translation.translations_doctrine_loader
             - @manuel_translation.translations_repository
             - @filesystem
+            - %kernel.cache_dir%
             - %manuel_translation.locales%
             - %manuel_translation.translations_backup_dir%
