--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,23 +1,23 @@
 services:
     manuel_translation.translations_repository:
         class: ManuelAguirre\Bundle\TranslationBundle\Entity\TranslationRepository
-        factory: [@doctrine.orm.entity_manager, getRepository]
+        factory: ["@doctrine.orm.entity_manager", "getRepository"]
         arguments: ['ManuelTranslationBundle:Translation']
 
     manuel_translation.translations_doctrine_loader:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\Loader\DoctrineLoader
-        arguments: [@manuel_translation.translations_repository, %manuel_translation.filename_template%]
+        arguments: ["@manuel_translation.translations_repository", "%manuel_translation.filename_template%"]
         tags:
             - { name: translation.loader, alias: doctrine }
 
     manuel_translation.translation_form_filter_type:
         class: ManuelAguirre\Bundle\TranslationBundle\Form\Type\TranslationFilterType
-        arguments: [@manuel_translation.translations_repository]
+        arguments: ["@manuel_translation.translations_repository"]
         tags:
             - { name: form.type, alias: translation_filter }
 
     manuel_translation.translation_type:
         class: ManuelAguirre\Bundle\TranslationBundle\Form\Type\TranslationType
-        arguments: [@manuel_translation.translations_repository]
+        arguments: ["@manuel_translation.translations_repository", "%manuel_translation.locales%"]
         tags:
             - { name: form.type , alias: manuel_translation }
