--- a/Resources/package.json
+++ b/Resources/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "vue": "^1.0.26",
+    "vue-i18n": "^4.4.0",
     "vue-loading": "^0.1.4",
     "vue-resource": "^0.9.3"
   }
