--- a/Resources/package.json
+++ b/Resources/package.json
@@ -16,6 +16,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
