--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -22,3 +22,9 @@ services:
         arguments: ["@manuel_translation.translations_repository", "%manuel_translation.locales%"]
         tags:
             - { name: form.type , alias: manuel_translation }
+
+    manuel_translation.controller.api:
+        class: ManuelAguirre\Bundle\TranslationBundle\Controller\ApiController
+        arguments:
+            - "@manuel_translation.serializer"
+            - "@manuel_translation.repository"
