--- a/Resources/config/serializer.yml
+++ b/Resources/config/serializer.yml
@@ -3,7 +3,9 @@ services:
         class: Symfony\Component\Serializer\Serializer
         arguments:
             - ["@manuel_translation.serializer.normalizer.object"]
-            - ["@manuel_translation.serializer.encoder.json"]
+            -
+                - "@manuel_translation.serializer.encoder.json"
+                - "@manuel_translation.serializer.encoder.xml"
 
     manuel_translation.serializer.normalizer.object:
         public: false
@@ -12,3 +14,7 @@ services:
     manuel_translation.serializer.encoder.json:
         public: false
         class: Symfony\Component\Serializer\Encoder\JsonEncoder
+
+    manuel_translation.serializer.encoder.xml:
+        public: false
+        class: Symfony\Component\Serializer\Encoder\XmlEncoder
