--- a/Resources/package.json
+++ b/Resources/package.json
@@ -31,6 +31,7 @@
     "vue": "^1.0.26",
     "vue-i18n": "^4.4.0",
     "vue-loading": "^0.1.4",
-    "vue-resource": "^0.9.3"
+    "vue-resource": "^0.9.3",
+    "vue-validator": "^2.1.6"
   }
 }
