--- a/Resources/package.json
+++ b/Resources/package.json
@@ -1,14 +1,10 @@
 {
   "author": "Manuel aguirre",
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-runtime": "^6.11.6",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "css-loader": "^0.24.0",
+    "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
@@ -18,20 +14,16 @@
     "gulp-util": "^3.0.7",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "vue-hot-reload-api": "^1.3.3",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^8.5.2",
-    "vue-style-loader": "^1.0.0",
-    "vueify": "^8.7.0",
-    "webpack": "^1.13.2"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "jquery": "^3.1.0",
     "lodash": "^4.15.0",
-    "vue": "^1.0.26",
-    "vue-i18n": "^4.4.0",
-    "vue-loading": "^0.1.4",
-    "vue-resource": "^0.9.3",
-    "vue-validator": "^2.1.6"
+    "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.1",
+    "react-i18nify": "^1.6.3",
+    "react-resource": "^1.0.8"
   }
 }
