--- a/Resources/package.json
+++ b/Resources/package.json
@@ -2,8 +2,11 @@
   "author": "Manuel aguirre",
   "devDependencies": {
     "babel-core": "^6.13.2",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-plugin-transform-vue-jsx": "^3.2.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
@@ -26,12 +29,20 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
+    "bootstrap-vue": "^0.3.9",
     "jquery": "^3.1.0",
     "lodash": "^4.15.0",
-    "vue": "^1.0.26",
+    "vue": "^2.1.3",
+    "vue-hot-reload-api": "^2.0.6",
     "vue-i18n": "^4.4.0",
+    "vue-loader": "^10.0.2",
     "vue-loading": "^0.1.4",
-    "vue-resource": "^0.9.3",
-    "vue-validator": "^2.1.6"
+    "vue-resource": "^1.0.3",
+    "vue-validator": "^2.1.6",
+    "vueify": "^9.3.0"
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common"
   }
 }
