--- a/Resources/package.json
+++ b/Resources/package.json
@@ -26,6 +26,7 @@
     "vue-loader": "^8.5.2",
     "vue-style-loader": "^1.0.0",
     "vueify": "^8.7.0",
+    "watchify": "^3.7.0",
     "webpack": "^1.13.2"
   },
   "dependencies": {
@@ -39,6 +40,8 @@
     "vue-loader": "^10.0.2",
     "vue-loading": "^0.1.4",
     "vue-resource": "^1.0.3",
+    "vue-spinner": "^1.0.2",
+    "vue-top-progress": "^0.4.0",
     "vue-validator": "^2.1.6",
     "vueify": "^9.3.0"
   },
