Implementando removedor de cache de traducciones
La idea es poder usar este servicio para remove los archivos
de caché en dev y producción y así no tener que borrar
toda la cache para ver reflejados los cambios.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -40,3 +40,8 @@ services:
         class: ManuelAguirre\Bundle\TranslationBundle\Http\ResponseGenerator
         arguments: ["@manuel_translation.serializer"]
         public: false
+
+    manuel_translation.cache_remover:
+        class: ManuelAguirre\Bundle\TranslationBundle\Translation\CacheRemover
+        arguments: ["@filesystem", "%kernel.cache_dir%"]
+        public: false
