Agregada opción para regenerar cache de traducciones
La idea es poder regenerar la cache tanto en dev como en prod
sin necesidad de borrar toda la cache del proyecto.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -44,4 +44,4 @@ services:
     manuel_translation.cache_remover:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\CacheRemover
         arguments: ["@filesystem", "%kernel.cache_dir%"]
-        public: false
+        public: true
