--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "manuelj555/manuel-translation-bundle",
   "require": {
     "php": ">=5.3.3",
-    "symfony/framework-bundle": "~2.5",
+    "symfony/framework-bundle": "^2.5||^3.0||^4.0",
     "pagerfanta/pagerfanta": "~1.0"
   },
   "autoload": {
