Ajustando yml para symfony 3
Se ajusta la sintaxis para que no de error en symfony 3 en adelante

--- a/Resources/config/services_dev.yml
+++ b/Resources/config/services_dev.yml
@@ -2,9 +2,9 @@ services:
     manuel_translation.translations_doctrine_dumper:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\Dumper\DoctrineDumper
         arguments:
-            - @doctrine.orm.entity_manager
-            - @manuel_translation.translations_repository
-            - %manuel_translation.locales%
+            - "@doctrine.orm.entity_manager"
+            - "@manuel_translation.translations_repository"
+            - "%manuel_translation.locales%"
         tags:
             - { name: translation.dumper, alias: doctrine }
 
@@ -13,18 +13,18 @@ services:
 
     manuel_translation.debug_translator:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\DebugTranslator
-        arguments: [@manuel_translation.debug_translator.inner]
+        arguments: ["@manuel_translation.debug_translator.inner"]
         decorates: translator
 
     manuel_translation.translations_data_collector:
         class: ManuelAguirre\Bundle\TranslationBundle\DataCollector\TranslationDataCollector
         arguments:
-            - @manuel_translation.debug_translator
-            - %manuel_translation.locales%
+            - "@manuel_translation.debug_translator"
+            - "%manuel_translation.locales%"
         tags:
             -
                 name: data_collector
-                template: @ManuelTranslation/DataCollector/translations.html.twig
+                template: "@ManuelTranslation/DataCollector/translations.html.twig"
                 id: manuel_translations
 
     manuel_translation.doctrine.translation_log_listener:
@@ -47,23 +47,23 @@ services:
     manuel_translation.translation_manager:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\TranslationManager
         arguments:
-            - @translation.extractor
-            - @manuel_translation.translation_loader
-            - @manuel_translation.translations_doctrine_loader
-            - @manuel_translation.translations_doctrine_dumper
-            - @manuel_translation.translations_repository
-            - %manuel_translation.locales%
-            - %manuel_translation.extract_dirs%
-            - %manuel_translation.translations_files_dirs%
+            - "@translation.extractor"
+            - "@manuel_translation.translation_loader"
+            - "@manuel_translation.translations_doctrine_loader"
+            - "@manuel_translation.translations_doctrine_dumper"
+            - "@manuel_translation.translations_repository"
+            - "%manuel_translation.locales%"
+            - "%manuel_translation.extract_dirs%"
+            - "%manuel_translation.translations_files_dirs%"
         calls:
-            - ['setFilesPrefix', [%manuel_translation.files_prefix%]]
+            - ['setFilesPrefix', ["%manuel_translation.files_prefix%"]]
 
     manuel_translation.backup_manager:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\BackupManager
         arguments:
-            - @manuel_translation.translations_doctrine_loader
-            - @manuel_translation.translations_doctrine_dumper
-            - %manuel_translation.locales%
+            - "@manuel_translation.translations_doctrine_loader"
+            - "@manuel_translation.translations_doctrine_dumper"
+            - "%manuel_translation.locales%"
         calls:
-            - ['setBackupDumper', [@translation.dumper.php]]
-            - ['setBackupDir', [%manuel_translation.translations_backup_dir%]]
+            - ['setBackupDumper', ["@translation.dumper.php"]]
+            - ['setBackupDir', ["%manuel_translation.translations_backup_dir%"]]
