--- a/Resources/config/sync_services.yml
+++ b/Resources/config/sync_services.yml
@@ -2,10 +2,10 @@ services:
     manuel_translation.synchronizator:
         class: ManuelAguirre\Bundle\TranslationBundle\Synchronization\Synchronizator
         arguments:
-            - @doctrine.orm.entity_manager
-            - @manuel_translation.translations_doctrine_loader
-            - @manuel_translation.translations_repository
-            - @filesystem
-            - %kernel.cache_dir%
-            - %manuel_translation.locales%
-            - %manuel_translation.translations_backup_dir%
+            - "@doctrine.orm.entity_manager"
+            - "@manuel_translation.translations_doctrine_loader"
+            - "@manuel_translation.translations_repository"
+            - "@filesystem"
+            - "%kernel.cache_dir%"
+            - "%manuel_translation.locales%"
+            - "%manuel_translation.translations_backup_dir%"
