Mejoras en el bundle de traducciones
Se crea un dumper de los catalogos de doctrine, con la finalidad
de que este se ejecute al hacer cache clear o warmup.

Y que se generen los catalogos en ese momento.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -45,3 +45,10 @@ services:
         class: ManuelAguirre\Bundle\TranslationBundle\Translation\CacheRemover
         arguments: ["@filesystem", "%kernel.cache_dir%"]
         public: true
+
+    manuel_translation.dumper.catalogues:
+        class: ManuelAguirre\Bundle\TranslationBundle\Translation\Dumper\CataloguesDumper
+        arguments: ["@filesystem", "%manuel_translation.filename_template%", "%manuel_translation.locales%"]
+        public: false
+        tags:
+            - { name: "kernel.cache_warmer", priority: 1000 }
