--- a/Resources/config/services_dev.yml
+++ b/Resources/config/services_dev.yml
@@ -36,9 +36,7 @@ services:
     manuel_translation.doctrine.dump_files_listener:
         class: ManuelAguirre\Bundle\TranslationBundle\Doctrine\Listener\DumpFilesListener
         arguments:
-            - "@filesystem"
-            - "%manuel_translation.locales%"
-            - "%manuel_translation.filename_template%"
+            - "@manuel_translation.dumper.catalogues"
         tags:
             - { name: doctrine.event_listener, event: postUpdate }
             - { name: doctrine.event_listener, event: postPersist }
