Ajustando servicio para que sea publico

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,7 @@
 services:
-    manuel_translation.repository: "@manuel_translation.translations_repository"
+    manuel_translation.repository:
+        alias: "manuel_translation.translations_repository"
+        public: true
     manuel_translation.translations_repository:
         class: ManuelAguirre\Bundle\TranslationBundle\Entity\TranslationRepository
         factory: ["@doctrine.orm.entity_manager", "getRepository"]
