Ajuste en servicio para funcionar en symfony 4, y ajuste de ruta para descargar el archivo (utilizo la variable backup_dir)

--- a/Resources/config/sync_services.yml
+++ b/Resources/config/sync_services.yml
@@ -1,5 +1,8 @@
 services:
     manuel_translation.synchronizator:
+        alias: "manuel_translation.synchronizer"
+        public: true
+    manuel_translation.synchronizer:
         class: ManuelAguirre\Bundle\TranslationBundle\Synchronization\Synchronizator
         arguments:
             - "@doctrine.orm.entity_manager"
