--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
   "name": "manuelj555/manuel-translation-bundle",
   "require": {
-    "php": ">=5.3.3",
-    "symfony/framework-bundle": "^2.5||^3.0||^4.0",
-    "pagerfanta/pagerfanta": "~1.0"
+    "php": ">=7.2.0",
+    "symfony/framework-bundle": "^5.0",
+    "pagerfanta/pagerfanta": "^1.0.1|^2.0"
   },
   "autoload": {
     "psr-4": {"ManuelAguirre\\Bundle\\TranslationBundle\\": ""}
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.0-dev"
+      "dev-master": "5.0-dev"
     }
   }
 }
