Actualizando controladores y comandos a Symfony 5.
 * Se ajustan importaciones de  clases.
 * Se ajusta y activa el comando de manuel:translation:sync

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,6 +7,16 @@ services:
         resource: '../../Controller'
         tags: ['controller.service_arguments', 'container.service_subscriber']
 
+    ManuelAguirre\Bundle\TranslationBundle\Command\:
+        resource: '../../Command'
+
+    ManuelAguirre\Bundle\TranslationBundle\Command\TranslationToDbCommand:
+        arguments:
+            - ""
+            - ""
+            - "%manuel_translation.filename_template%"
+            - "%manuel_translation.locales%"
+
     manuel_translation.repository:
         alias: "manuel_translation.translations_repository"
         public: true
