Permitiendo colocar un prefijo en las tablas de traducción

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -80,3 +80,9 @@ services:
         arguments:
             - "@Symfony\\Contracts\\Translation\\TranslatorInterface"
             - "@ManuelAguirre\\Bundle\\TranslationBundle\\Entity\\TranslationRepository"
+
+    ManuelAguirre\Bundle\TranslationBundle\Doctrine\Listener\ChangeTableNameListener:
+        arguments:
+            - ""
+        tags:
+            - { name: doctrine.event_listener, event: loadClassMetadata }
