--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "manuelj555/manuel-translation-bundle",
   "require": {
     "php": ">=7.2.0",
-    "symfony/framework-bundle": "^4.4|^5.0",
+    "symfony/framework-bundle": "^4.4",
     "pagerfanta/pagerfanta": "^1.0.1|^2.0"
   },
   "autoload": {
