--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "manuelj555/manuel-translation-bundle",
   "require": {
-    "php": ">=7.2.0",
-    "symfony/framework-bundle": "^5.0",
+    "php": ">8.1",
+    "symfony/framework-bundle": "^5.2|^6.0",
     "pagerfanta/pagerfanta": "^1.0.1|^2.0"
   },
   "autoload": {
@@ -10,7 +10,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "5.0-dev"
+      "dev-master": "6.0-dev"
     }
   }
 }
