--- a/Resources/package.json
+++ b/Resources/package.json
@@ -9,7 +9,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "css-loader": "^0.24.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
@@ -17,8 +17,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-uglifycss": "^1.0.6",
     "gulp-util": "^3.0.7",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.2",
@@ -28,8 +28,10 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
-    "jquery": "^3.1.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.15.0",
+    "natives": "^1.1.6",
+    "vinyl": "^2.2.1",
     "vue": "^1.0.26",
     "vue-i18n": "^4.4.0",
     "vue-loading": "^0.1.4",
