Ajustando config del bundle

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -24,22 +24,24 @@ services:
     ManuelAguirre\Bundle\TranslationBundle\TranslationRepository:
         alias: ManuelAguirre\Bundle\TranslationBundle\Entity\TranslationRepository
 
-    ManuelAguirre\Bundle\TranslationBundle\Translation\DebugTranslator:
-        arguments: [ '@ManuelAguirre\Bundle\TranslationBundle\Translation\DebugTranslator.inner' ]
-        decorates: translator
+when@dev:
+    services:
+        ManuelAguirre\Bundle\TranslationBundle\Translation\DebugTranslator:
+            arguments: [ '@ManuelAguirre\Bundle\TranslationBundle\Translation\DebugTranslator.inner' ]
+            decorates: translator
 
-    ManuelAguirre\Bundle\TranslationBundle\DataCollector\TranslationDataCollector:
-        class: ManuelAguirre\Bundle\TranslationBundle\DataCollector\TranslationDataCollector
-        arguments:
-            - "@translator"
-            - "%manuel_translation.locales%"
-        tags:
-            -   name: data_collector
-                template: "@ManuelTranslation/DataCollector/translations.html.twig"
-                id: manuel_translations
+        ManuelAguirre\Bundle\TranslationBundle\DataCollector\TranslationDataCollector:
+            class: ManuelAguirre\Bundle\TranslationBundle\DataCollector\TranslationDataCollector
+            arguments:
+                - "@translator"
+                - "%manuel_translation.locales%"
+            tags:
+                -   name: data_collector
+                    template: "@ManuelTranslation/DataCollector/translations.html.twig"
+                    id: manuel_translations
 
-    ManuelAguirre\Bundle\TranslationBundle\Doctrine\Listener\DumpFilesListener:
-        tags:
-            - { name: doctrine.event_listener, event: postUpdate }
-            - { name: doctrine.event_listener, event: postPersist }
-            - { name: doctrine.event_listener, event: postFlush }
+        ManuelAguirre\Bundle\TranslationBundle\Doctrine\Listener\DumpFilesListener:
+            tags:
+                - { name: doctrine.event_listener, event: postUpdate }
+                - { name: doctrine.event_listener, event: postPersist }
+                - { name: doctrine.event_listener, event: postFlush }
