--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "devDependencies": {
     "@babel/preset-react": "^7.17.12",
     "@symfony/webpack-encore": "^2.1.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^12.6.0",
     "webpack-notifier": "^1.15.0"
   },
   "scripts": {
