--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,7 @@
 {
-  "app.js": "/app.js",
-  "config.js": "/config.js",
-  "runtime.js": "/runtime.js"
+  "bundles/manueltranslation/app.js": "./app.js",
+  "bundles/manueltranslation/config.js": "./config.js",
+  "bundles/manueltranslation/styles.css": "./styles.css",
+  "bundles/manueltranslation/fonts/bootstrap-icons.woff?": "./fonts/bootstrap-icons.7ff3ca6f.woff",
+  "bundles/manueltranslation/fonts/bootstrap-icons.woff2?": "./fonts/bootstrap-icons.f2539a50.woff2"
 }
