--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "sass": "^1.52.1",
     "sass-loader": "^12.6.0",
+    "uuid": "^8.3.2",
     "webpack-notifier": "^1.15.0"
   },
   "scripts": {
