--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "bundles/manueltranslation/app.js": "./app.js",
   "bundles/manueltranslation/config.js": "./config.js",
+  "bundles/manueltranslation/conflicts.js": "./conflicts.js",
   "bundles/manueltranslation/styles.css": "./styles.css",
   "bundles/manueltranslation/fonts/bootstrap-icons.woff?": "./fonts/bootstrap-icons.7ff3ca6f.woff",
   "bundles/manueltranslation/fonts/bootstrap-icons.woff2?": "./fonts/bootstrap-icons.f2539a50.woff2"
