--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,7 @@
   "bundles/manueltranslation/config.js": "./config.js",
   "bundles/manueltranslation/conflicts.js": "./conflicts.js",
   "bundles/manueltranslation/profiler.js": "./profiler.js",
+  "bundles/manueltranslation/profiler_css.css": "./profiler_css.css",
   "bundles/manueltranslation/styles.css": "./styles.css",
   "bundles/manueltranslation/fonts/bootstrap-icons.woff?": "./fonts/bootstrap-icons.7ff3ca6f.woff",
   "bundles/manueltranslation/fonts/bootstrap-icons.woff2?": "./fonts/bootstrap-icons.f2539a50.woff2"
